some changes related to colab

--- a/Tutorial -- Introduction to ML.ipynb
+++ b/Tutorial -- Introduction to ML.ipynb
@@ -109,6 +109,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We first download the repo to get access to data and some utility code (This is specifically for colab.)\n",
+    "!rm -rf ivado-workshop_recsys_19\n",
+    "!git clone https://github.com/lcharlin/ivado-workshop_recsys_19/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,6 +127,7 @@
     "- `reduce` function will come in handy to iteratively process data\n",
     "- `os` as a standard packages for performing system operations (e.g., opening files)\n",
     "- `re` package for regex\n",
+    "- `sys` package to deal with system-level operations (here used to change the search path) \n",
     "- `time` package we will use to measure the length of certain operations\n",
     "\n",
     "\n",
@@ -149,6 +161,8 @@
     "from sklearn import cluster\n",
     "from sklearn import neural_network\n",
     "\n",
+    "import sys\n",
+    "sys.path += ['ivado-workshop_recsys_19/']\n",
     "from local_utils import DrawNN"
    ]
   },
@@ -176,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR='dat/ml-1m/' # this is where most of our data lives"
+    "DATA_DIR='ivado-workshop_recsys_19/dat/ml-1m/' # this is where most of our data lives"
    ]
   },
   {
