a few more changes for colab

--- a/Tutorial -- Introduction to ML.ipynb
+++ b/Tutorial -- Introduction to ML.ipynb
@@ -190,7 +190,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR='ivado-workshop_recsys_19/dat/ml-1m/' # this is where most of our data lives"
+    "ROOT_DIR='ivado-workshop_recsys_19/'\n",
+    "DATA_DIR=os.path.join(ROOT_DIR, 'dat/ml-1m/') # this is where most of our data lives\n",
+    "DATA_DIR_20ML=os.path.join(ROOT_DIR, 'dat/ml-20m/') # for the tags data"
    ]
   },
   {
@@ -851,7 +853,7 @@
    ],
    "source": [
     "# load ml-20m tags\n",
-    "tags_scores = pd.read_csv('dat/ml-20m/genome-scores.csv.gz', \n",
+    "tags_scores = pd.read_csv(os.path.join(DATA_DIR_20ML, 'genome-scores.csv.gz'), \n",
     "                          skiprows=1, \n",
     "                          names=['mid', 'tid', 'relevance'])\n",
     "display(tags_scores.head(10))"
