--- a/Introduction_to_ML.ipynb
+++ b/Introduction_to_ML.ipynb
@@ -22456,7 +22456,8 @@
     "regr_nn = neural_network.MLPRegressor(alpha=0.1, # l2-regularization (weight decay)\n",
     "                                      hidden_layer_sizes=tuple(hidden_layers_size),\n",
     "                                      early_stopping=True, # stop if validation performance decreases\n",
-    "                                      verbose=True)\n",
+    "                                      verbose=True,\n",
+    "                                      random_state=1234)\n",
     "start = time.time()\n",
     "regr_nn.fit(X_train_tags, y_train_tags)\n",
     "fit_time = time.time() - start\n",
