--- a/Introduction_to_ML_Solutions.ipynb
+++ b/Introduction_to_ML_Solutions.ipynb
@@ -22569,7 +22569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
@@ -22578,132 +22578,160 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1, loss = 5.86315374\n",
-      "Validation score: -5.091474\n",
-      "Iteration 2, loss = 2.05449545\n",
-      "Validation score: -0.754385\n",
-      "Iteration 3, loss = 0.99838598\n",
-      "Validation score: -0.522943\n",
-      "Iteration 4, loss = 0.94336607\n",
-      "Validation score: -0.455587\n",
-      "Iteration 5, loss = 0.90181224\n",
-      "Validation score: -0.392134\n",
-      "Iteration 6, loss = 0.86262803\n",
-      "Validation score: -0.329093\n",
-      "Iteration 7, loss = 0.82527822\n",
-      "Validation score: -0.270895\n",
-      "Iteration 8, loss = 0.78982643\n",
-      "Validation score: -0.216202\n",
-      "Iteration 9, loss = 0.75635669\n",
-      "Validation score: -0.166045\n",
-      "Iteration 10, loss = 0.72480237\n",
-      "Validation score: -0.116360\n",
-      "Iteration 11, loss = 0.69555715\n",
-      "Validation score: -0.072561\n",
-      "Iteration 12, loss = 0.66823548\n",
-      "Validation score: -0.034728\n",
-      "Iteration 13, loss = 0.64386980\n",
-      "Validation score: 0.002261\n",
-      "Iteration 14, loss = 0.62146213\n",
-      "Validation score: 0.036143\n",
-      "Iteration 15, loss = 0.60119451\n",
-      "Validation score: 0.063776\n",
-      "Iteration 16, loss = 0.58322864\n",
-      "Validation score: 0.086622\n",
-      "Iteration 17, loss = 0.56773908\n",
-      "Validation score: 0.107402\n",
-      "Iteration 18, loss = 0.55400253\n",
-      "Validation score: 0.124322\n",
-      "Iteration 19, loss = 0.54184077\n",
-      "Validation score: 0.137267\n",
-      "Iteration 20, loss = 0.53109023\n",
-      "Validation score: 0.152086\n",
-      "Iteration 21, loss = 0.52148700\n",
-      "Validation score: 0.162134\n",
-      "Iteration 22, loss = 0.51301910\n",
-      "Validation score: 0.172598\n",
-      "Iteration 23, loss = 0.50543115\n",
-      "Validation score: 0.179587\n",
-      "Iteration 24, loss = 0.49827899\n",
-      "Validation score: 0.185668\n",
-      "Iteration 25, loss = 0.49202836\n",
-      "Validation score: 0.189738\n",
-      "Iteration 26, loss = 0.48621094\n",
-      "Validation score: 0.197592\n",
-      "Iteration 27, loss = 0.48109042\n",
-      "Validation score: 0.201402\n",
-      "Iteration 28, loss = 0.47619067\n",
-      "Validation score: 0.203472\n",
-      "Iteration 29, loss = 0.47269938\n",
-      "Validation score: 0.208978\n",
-      "Iteration 30, loss = 0.46783645\n",
-      "Validation score: 0.210738\n",
-      "Iteration 31, loss = 0.46358716\n",
-      "Validation score: 0.214304\n",
-      "Iteration 32, loss = 0.46056148\n",
-      "Validation score: 0.216467\n",
-      "Iteration 33, loss = 0.45638748\n",
-      "Validation score: 0.215394\n",
-      "Iteration 34, loss = 0.45393094\n",
-      "Validation score: 0.221047\n",
-      "Iteration 35, loss = 0.45024523\n",
-      "Validation score: 0.222275\n",
-      "Iteration 36, loss = 0.44809091\n",
-      "Validation score: 0.223240\n",
-      "Iteration 37, loss = 0.44515134\n",
-      "Validation score: 0.219424\n",
-      "Iteration 38, loss = 0.44237418\n",
-      "Validation score: 0.226022\n",
-      "Iteration 39, loss = 0.43966083\n",
-      "Validation score: 0.228321\n",
-      "Iteration 40, loss = 0.43718308\n",
-      "Validation score: 0.227611\n",
-      "Iteration 41, loss = 0.43461681\n",
-      "Validation score: 0.230021\n",
-      "Iteration 42, loss = 0.43302463\n",
-      "Validation score: 0.230039\n",
-      "Iteration 43, loss = 0.43081756\n",
-      "Validation score: 0.229629\n",
-      "Iteration 44, loss = 0.42803269\n",
-      "Validation score: 0.231112\n",
-      "Iteration 45, loss = 0.42606538\n",
-      "Validation score: 0.224523\n",
-      "Iteration 46, loss = 0.42471241\n",
-      "Validation score: 0.226057\n",
-      "Iteration 47, loss = 0.42342263\n",
-      "Validation score: 0.230784\n",
-      "Iteration 48, loss = 0.42042258\n",
-      "Validation score: 0.232555\n",
-      "Iteration 49, loss = 0.41833551\n",
-      "Validation score: 0.234042\n",
-      "Iteration 50, loss = 0.41713696\n",
-      "Validation score: 0.224759\n",
-      "Iteration 51, loss = 0.41450791\n",
-      "Validation score: 0.234895\n",
-      "Iteration 52, loss = 0.41216615\n",
-      "Validation score: 0.234730\n",
-      "Iteration 53, loss = 0.41126234\n",
-      "Validation score: 0.233901\n",
-      "Iteration 54, loss = 0.41111080\n",
-      "Validation score: 0.234503\n",
-      "Iteration 55, loss = 0.40688026\n",
-      "Validation score: 0.230076\n",
-      "Iteration 56, loss = 0.40538904\n",
-      "Validation score: 0.233822\n",
-      "Iteration 57, loss = 0.40402689\n",
-      "Validation score: 0.231033\n",
-      "Iteration 58, loss = 0.40203978\n",
-      "Validation score: 0.233522\n",
-      "Iteration 59, loss = 0.40001363\n",
-      "Validation score: 0.230761\n",
-      "Iteration 60, loss = 0.39853433\n",
-      "Validation score: 0.234089\n",
-      "Iteration 61, loss = 0.39681623\n",
-      "Validation score: 0.233235\n",
-      "Iteration 62, loss = 0.39469446\n",
-      "Validation score: 0.233881\n",
+      "Iteration 1, loss = 6.56955926\n",
+      "Validation score: -4.536097\n",
+      "Iteration 2, loss = 2.12167821\n",
+      "Validation score: -1.250044\n",
+      "Iteration 3, loss = 1.24974278\n",
+      "Validation score: -0.973809\n",
+      "Iteration 4, loss = 1.15528883\n",
+      "Validation score: -0.885417\n",
+      "Iteration 5, loss = 1.09444618\n",
+      "Validation score: -0.797478\n",
+      "Iteration 6, loss = 1.03693099\n",
+      "Validation score: -0.715147\n",
+      "Iteration 7, loss = 0.98282816\n",
+      "Validation score: -0.634489\n",
+      "Iteration 8, loss = 0.93160967\n",
+      "Validation score: -0.558859\n",
+      "Iteration 9, loss = 0.88383214\n",
+      "Validation score: -0.488287\n",
+      "Iteration 10, loss = 0.83924576\n",
+      "Validation score: -0.420767\n",
+      "Iteration 11, loss = 0.79792269\n",
+      "Validation score: -0.357542\n",
+      "Iteration 12, loss = 0.75975209\n",
+      "Validation score: -0.302905\n",
+      "Iteration 13, loss = 0.72452769\n",
+      "Validation score: -0.248625\n",
+      "Iteration 14, loss = 0.69238867\n",
+      "Validation score: -0.198602\n",
+      "Iteration 15, loss = 0.66326857\n",
+      "Validation score: -0.155054\n",
+      "Iteration 16, loss = 0.63671488\n",
+      "Validation score: -0.119251\n",
+      "Iteration 17, loss = 0.61312702\n",
+      "Validation score: -0.080486\n",
+      "Iteration 18, loss = 0.59194446\n",
+      "Validation score: -0.049278\n",
+      "Iteration 19, loss = 0.57274156\n",
+      "Validation score: -0.022999\n",
+      "Iteration 20, loss = 0.55532517\n",
+      "Validation score: 0.002410\n",
+      "Iteration 21, loss = 0.53999818\n",
+      "Validation score: 0.025167\n",
+      "Iteration 22, loss = 0.52639797\n",
+      "Validation score: 0.043515\n",
+      "Iteration 23, loss = 0.51423982\n",
+      "Validation score: 0.059633\n",
+      "Iteration 24, loss = 0.50286932\n",
+      "Validation score: 0.072648\n",
+      "Iteration 25, loss = 0.49281153\n",
+      "Validation score: 0.086717\n",
+      "Iteration 26, loss = 0.48381674\n",
+      "Validation score: 0.101367\n",
+      "Iteration 27, loss = 0.47536800\n",
+      "Validation score: 0.112274\n",
+      "Iteration 28, loss = 0.46782695\n",
+      "Validation score: 0.121851\n",
+      "Iteration 29, loss = 0.46103321\n",
+      "Validation score: 0.130795\n",
+      "Iteration 30, loss = 0.45473400\n",
+      "Validation score: 0.136465\n",
+      "Iteration 31, loss = 0.44866214\n",
+      "Validation score: 0.142043\n",
+      "Iteration 32, loss = 0.44353288\n",
+      "Validation score: 0.146468\n",
+      "Iteration 33, loss = 0.43856003\n",
+      "Validation score: 0.155729\n",
+      "Iteration 34, loss = 0.43392629\n",
+      "Validation score: 0.160179\n",
+      "Iteration 35, loss = 0.43006055\n",
+      "Validation score: 0.165758\n",
+      "Iteration 36, loss = 0.42584607\n",
+      "Validation score: 0.169073\n",
+      "Iteration 37, loss = 0.42228365\n",
+      "Validation score: 0.174010\n",
+      "Iteration 38, loss = 0.41908271\n",
+      "Validation score: 0.176813\n",
+      "Iteration 39, loss = 0.41545429\n",
+      "Validation score: 0.178841\n",
+      "Iteration 40, loss = 0.41238192\n",
+      "Validation score: 0.176571\n",
+      "Iteration 41, loss = 0.40979598\n",
+      "Validation score: 0.183233\n",
+      "Iteration 42, loss = 0.40709323\n",
+      "Validation score: 0.183977\n",
+      "Iteration 43, loss = 0.40397130\n",
+      "Validation score: 0.179800\n",
+      "Iteration 44, loss = 0.40206260\n",
+      "Validation score: 0.187936\n",
+      "Iteration 45, loss = 0.39942581\n",
+      "Validation score: 0.190349\n",
+      "Iteration 46, loss = 0.39710784\n",
+      "Validation score: 0.191103\n",
+      "Iteration 47, loss = 0.39537160\n",
+      "Validation score: 0.192631\n",
+      "Iteration 48, loss = 0.39268565\n",
+      "Validation score: 0.194116\n",
+      "Iteration 49, loss = 0.39125345\n",
+      "Validation score: 0.194635\n",
+      "Iteration 50, loss = 0.38863125\n",
+      "Validation score: 0.193640\n",
+      "Iteration 51, loss = 0.38695237\n",
+      "Validation score: 0.195163\n",
+      "Iteration 52, loss = 0.38495420\n",
+      "Validation score: 0.196752\n",
+      "Iteration 53, loss = 0.38303410\n",
+      "Validation score: 0.197206\n",
+      "Iteration 54, loss = 0.38177100\n",
+      "Validation score: 0.198190\n",
+      "Iteration 55, loss = 0.37999612\n",
+      "Validation score: 0.198320\n",
+      "Iteration 56, loss = 0.37848696\n",
+      "Validation score: 0.195625\n",
+      "Iteration 57, loss = 0.37652131\n",
+      "Validation score: 0.198521\n",
+      "Iteration 58, loss = 0.37515503\n",
+      "Validation score: 0.193363\n",
+      "Iteration 59, loss = 0.37332858\n",
+      "Validation score: 0.198813\n",
+      "Iteration 60, loss = 0.37144545\n",
+      "Validation score: 0.198441\n",
+      "Iteration 61, loss = 0.37102877\n",
+      "Validation score: 0.197653\n",
+      "Iteration 62, loss = 0.36868002\n",
+      "Validation score: 0.199397\n",
+      "Iteration 63, loss = 0.36740827\n",
+      "Validation score: 0.199067\n",
+      "Iteration 64, loss = 0.36625290\n",
+      "Validation score: 0.198755\n",
+      "Iteration 65, loss = 0.36520086\n",
+      "Validation score: 0.199639\n",
+      "Iteration 66, loss = 0.36329862\n",
+      "Validation score: 0.199447\n",
+      "Iteration 67, loss = 0.36226388\n",
+      "Validation score: 0.198142\n",
+      "Iteration 68, loss = 0.36139548\n",
+      "Validation score: 0.197718\n",
+      "Iteration 69, loss = 0.35969095\n",
+      "Validation score: 0.199232\n",
+      "Iteration 70, loss = 0.35856112\n",
+      "Validation score: 0.193881\n",
+      "Iteration 71, loss = 0.35719898\n",
+      "Validation score: 0.196554\n",
+      "Iteration 72, loss = 0.35589177\n",
+      "Validation score: 0.185066\n",
+      "Iteration 73, loss = 0.35602646\n",
+      "Validation score: 0.197560\n",
+      "Iteration 74, loss = 0.35347714\n",
+      "Validation score: 0.196614\n",
+      "Iteration 75, loss = 0.35313695\n",
+      "Validation score: 0.191900\n",
+      "Iteration 76, loss = 0.35097403\n",
+      "Validation score: 0.194248\n",
       "Validation score did not improve more than tol=0.000100 for 10 consecutive epochs. Stopping.\n",
-      "fitting time: 54.20 seconds\n",
+      "fitting time: 72.46 seconds\n",
       "number of parameters: 32613\n"
      ]
     }
@@ -22713,7 +22741,8 @@
     "regr_nn = neural_network.MLPRegressor(alpha=0.1, # l2-regularization (weight decay)\n",
     "                                      hidden_layer_sizes=tuple(hidden_layers_size),\n",
     "                                      early_stopping=True, # stop if validation performance decreases\n",
-    "                                      verbose=True)\n",
+    "                                      verbose=True,\n",
+    "                                      random_state=1234)\n",
     "start = time.time()\n",
     "regr_nn.fit(X_train_tags, y_train_tags)\n",
     "fit_time = time.time() - start\n",
@@ -22737,15 +22766,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Mean squared error: 0.7323\n",
-      "Test Mean squared error: 1.0060\n"
+      "Train Mean squared error: 0.6416\n",
+      "Test Mean squared error: 1.0292\n"
      ]
     }
    ],
@@ -22775,8 +22804,8 @@
     "| ------------- |:-------------:| \n",
     "| 2.2 (Linear Reg. w. basic features)     | 1.031 | 0.8650  |\n",
     "| 2.3 (2.2 + movie tags)     | 0.991 | 0.8571 |\n",
-    "| 2.4 (2.3 + movie clusters) | 0.992 | 0.8570      |\n",
-    "| 2.5 (Neural Network w. features from 2.3) | 1.006 | 0.8650 | \n",
+    "| 2.4 (2.3 + movie clusters) | 0.992 | 0.8570   |\n",
+    "| 2.5 (Neural Network w. features from 2.3) | 1.029 | 0.8650 | \n",
     "\n",
     "Although neural networks are very powerful models, on this task the performance of our neural net does not outperform a simpler linear regression model. This of course does not mean that a different neural net (for example, one with more neurons per layer or more layers or just one trained from different hyperparameters) could not do better. "
    ]
