light polishing in MLP

--- a/Introduction_to_ML.ipynb
+++ b/Introduction_to_ML.ipynb
@@ -22473,10 +22473,14 @@
    "source": [
     "Much like previous models we can regularize a neural net to combat overfitting:\n",
     "- Here we use the same L2-penalty regularizer on all parameters. The strength of this regularizer is given by $\\alpha$. \n",
-    "- In addition, we use a second regularizer called `early-stopping`. Learning the parameters of a neural network is done iteratively using a method called gradient descent (as opposed to linear regression, there is not analytical solution for the parameters given the objective function). Early stopping simply evaluates validation error after each iteration. It stops learning when validation error stops improving. This can happen before the training loss converges. When it does not, then this regularizer has no effect on learning. In `scikit-learn`, the MLPRegressor class with `early_stopping=True` automatically splits a validation set from the training set to be used by this regularizer. The disadvantage, of course, is that this reduces the amount of data used to fit parameters. \n",
-    "\n",
-    "\n",
-    "Note: the training loss of this MLP model is the MSE. However, the reported numbers above \"Iteration 19, loss = XX\" do not seem to correspond to."
+    "- In addition, we use a second regularizer called `early-stopping`. Learning the parameters of a neural network is done iteratively using a method called gradient descent (as opposed to linear regression, there is not analytical solution for the parameters given the objective function). Early stopping simply evaluates validation error after each iteration. It stops learning when validation error stops improving. This can happen before the training loss converges. When it does not, then this regularizer has no effect on learning. In `scikit-learn`, the MLPRegressor class with `early_stopping=True` automatically splits a validation set from the training set to be used by this regularizer. The disadvantage, of course, is that this reduces the amount of data used to fit parameters. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 6:** Why does this model come with the possibility to set the random seed (i.e., `random_state`) while linear regression did not? "
    ]
   },
   {
@@ -22561,7 +22565,7 @@
     "$$ \n",
     " \n",
     " \n",
-    "- **Question 6:** What's wrong with the above model? Try to think about it for a minute or two before looking at the answer.\n",
+    "- **Question 7:** What's wrong with the above model? Try to think about it for a minute or two before looking at the answer.\n",
     "\n",
     "\n",
     "\n",
