--- a/Introduction_to_ML_Solutions.ipynb
+++ b/Introduction_to_ML_Solutions.ipynb
@@ -22760,8 +22760,16 @@
     "- Here we use the same L2-penalty regularizer on all parameters. The strength of this regularizer is given by $\\alpha$. \n",
     "- In addition, we use a second regularizer called `early-stopping`. Learning the parameters of a neural network is done iteratively using a method called gradient descent (as opposed to linear regression, there is not analytical solution for the parameters given the objective function). Early stopping simply evaluates validation error after each iteration. It stops learning when validation error stops improving. This can happen before the training loss converges. When it does not, then this regularizer has no effect on learning. In `scikit-learn`, the MLPRegressor class with `early_stopping=True` automatically splits a validation set from the training set to be used by this regularizer. The disadvantage, of course, is that this reduces the amount of data used to fit parameters. \n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 6:** Why does this model come with the possibility to set the random seed (i.e., `random_state`) while linear regression did not? \n",
     "\n",
-    "Note: the training loss of this MLP model is the MSE. However, the reported numbers above \"Iteration 19, loss = XX\" do not seem to correspond to."
+    "**Answer:** Linear regression has a single solution (i.e., regardless of the initialization the learned parameters will converge to the same values). This is not the case for neural networks. In practice, a good initialization can make a significant difference in the performance of the fitted model (many heuristics have been proposed for good initialization)."
    ]
   },
   {
@@ -22846,7 +22854,7 @@
     "$$ \n",
     " \n",
     " \n",
-    "- **Question 6:** What's wrong with the above model? Try to think about it for a minute or two before looking at the answer.\n",
+    "- **Question 7:** What's wrong with the above model? Try to think about it for a minute or two before looking at the answer.\n",
     "\n",
     "- **Possible Answer:** (there are others)\n",
     "    - There is no interaction between user features and item features. Think of a particular user, that user has a fixed $\\theta_{\\text{uid}_u}$ and so the only variation in its ratings comes from the movie features $\\theta_{\\text{mid}}$. This model will effectively only model the \"activity level\" of a user and movies' popularity. The most popular movie will be the top recommendation for every user. \n",
